--- a/contact.html
+++ b/contact.html
@@ -516,14 +516,15 @@
     <div class="mw-930">
       <div class="row mb-5">
         <div class="col-lg-6">
-          <h3 class="mb-4">Store in London</h3>
-          <p class="mb-4">1418 River Drive, Suite 35 Cottonhall, CA 9622<br/>United Kingdom</p>
-          <p class="mb-4">sale@uomo.com<br/>+44 20 7123 4567</p>
+
+          <h3 class="mb-4">Store in Khulna</h3>
+          <p class="mb-4">17, 5th Floor, R. Amin Trade Centre,KDA Ave, Khulna 9100</p>
+          <p class="mb-4">contact@frogbid.com<br/>+8801729277765</p>
         </div>
         <div class="col-lg-6">
-          <h3 class="mb-4">Store in Istanbul</h3>
-          <p class="mb-4">1418 River Drive, Suite 35 Cottonhall, CA 9622<br/>Turky</p>
-          <p class="mb-4">sale@uomo.com<br/>+90 212 555 1212</p>
+          <h3 class="mb-4">Store in Khulna</h3>
+          <p class="mb-4">17, 5th Floor, R. Amin Trade Centre,KDA Ave, Khulna 9100</p>
+          <p class="mb-4">contact@frogbid.com<br/>+8801729277765</p>
         </div>
       </div>
       <div class="contact-us__form">
@@ -628,14 +629,14 @@
 
       <div class="footer-column footer-menu mb-4 mb-lg-0">
         <h6 class="sub-menu__title text-uppercase">Contact</h6>
-        <p class="footer-address">1418 River Drive, Suite 35 Cottonhall, CA 9622 United States</p>
+        <p class="footer-address">17, 5th Floor, R. Amin Trade Centre,KDA Ave, Khulna 9100</p>
 
         <p class="m-0">
-          <strong class="fw-medium">sale@uomo.com</strong>
+          <strong class="fw-medium">contact@frogbid.com</strong>
         </p>
         <br>
         <p>
-          <strong class="fw-medium">+1 246-345-0695</strong>
+          <strong class="fw-medium">+8801729277765</strong>
         </p>
       </div><!-- /.footer-column -->
 
