--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </a>
 
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
             </a>
         </div><!-- /.logo -->
@@ -280,14 +280,14 @@
                     </li>
 
                     <li class="navigation__item">
-                        <a href="product.html" class="navigation__link js-nav-right d-flex align-items-center">Products
+                        <a href="#product" class="navigation__link js-nav-right d-flex align-items-center">Products
                             <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <use href="#icon_next_sm"/>
                             </svg>
                         </a>
                         <div class="sub-menu position-absolute top-0 start-100 w-100 d-none">
-                            <a href="product.html"
+                            <a href="#product"
                                class="navigation__link js-nav-left d-flex align-items-center border-bottom mb-2">
                                 <svg class="me-2" width="7" height="11" viewBox="0 0 7 11"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -295,15 +295,14 @@
                                 </svg>
                                 Products</a>
                             <ul class="list-unstyled">
-                                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+                                <li class="sub-menu__item"><a href="#collections-tab-2" class="menu-link menu-link_us-s">Promotional Jute
                                     Bags</a></li>
-                                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+                                <li class="sub-menu__item"><a href="#collections-tab-3" class="menu-link menu-link_us-s">Bangladeshi Jute
                                     Bags</a></li>
-                                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute
-                                    Fabrics </a></li>
-                                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn </a>
-                                </li>
+                                <li class="sub-menu__item"><a href="#collections-tab-4" class="menu-link menu-link_us-s">Jute Fabrics</a></li>
+                                <li class="sub-menu__item"><a href="#product" class="menu-link menu-link_us-s">Jute Yarn</a></li>
                             </ul>
+
                         </div>
                     </li>
 
@@ -452,7 +451,7 @@
     </div>
     <div class="header-desk header-desk_type_1">
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
             </a>
         </div><!-- /.logo -->
@@ -467,14 +466,14 @@
 
                 </li>
                 <li class="navigation__item">
-                    <a href="product.html" class="navigation__link">Products</a>
+                    <a href="#product" class="navigation__link">Products</a>
                     <ul class="default-menu list-unstyled">
-                        <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+                        <li class="sub-menu__item"><a href="#collections-tab-2" class="menu-link menu-link_us-s">Promotional Jute
                             Bags</a></li>
-                        <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+                        <li class="sub-menu__item"><a href="#collections-tab-3" class="menu-link menu-link_us-s">Bangladeshi Jute
                             Bags</a></li>
-                        <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Fabrics</a></li>
-                        <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn</a></li>
+                        <li class="sub-menu__item"><a href="#collections-tab-4" class="menu-link menu-link_us-s">Jute Fabrics</a></li>
+                        <li class="sub-menu__item"><a href="#product" class="menu-link menu-link_us-s">Jute Yarn</a></li>
                     </ul><!-- /.box-menu -->
                 </li>
                 <li class="navigation__item">
@@ -515,7 +514,7 @@
                 <div class="overflow-hidden position-relative h-100">
                     <div class="slideshow-character position-absolute bottom-0 pos_right-center">
 
-                        <img loading="lazy" src="/images/img.png" width="493" height="693" alt=""
+                        <img loading="lazy" src="/images/img_00.png" width="493" height="693" alt=""
                              class="slideshow-character__img animate animate_fade animate_btt animate_delay-9 w-auto h-auto"/>
                     </div>
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
@@ -537,7 +536,7 @@
                              <img loading="lazy" src="/images/img_1.png" width="560" height="560" alt=""
                                   class="animate animate_fade animate_btt animate_delay-5 w-auto h-auto"/>
                          </div>-->
-                        <img loading="lazy" src="/images/img_1.png" width="490" height="690" alt=""
+                        <img loading="lazy" src="/images/img_111.png" width="490" height="690" alt=""
                              class="slideshow-character__img animate animate_fade animate_btt animate_delay-9 w-auto h-auto"/>
                     </div>
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
@@ -558,7 +557,7 @@
                             <img loading="lazy" src="/images/img_2.png" width="690" height="690" alt=""
                                  class="animate animate_fade animate_btt animate_delay-5 w-auto h-auto"/>
                         </div>-->
-                        <img loading="lazy" src="/images/img_2.png" alt="" width="675" height="733"
+                        <img loading="lazy" src="/images/img_222.png" alt="" width="675" height="733"
                              class="slideshow-character__img animate animate_fade animate_btt animate_delay-9 w-auto h-auto"/>
                     </div>
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
@@ -1934,7 +1933,7 @@
         <div class="row row-cols-lg-5 row-cols-2">
             <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
                 <div class="logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
                     </a>
                 </div><!-- /.logo -->
@@ -2003,14 +2002,14 @@
 
             <div class="footer-column footer-menu mb-4 mb-lg-0">
                 <h6 class="sub-menu__title text-uppercase">Contact</h6>
-                <p class="footer-address">1418 River Drive, Suite 35 Cottonhall, CA 9622 United States</p>
+                <p class="footer-address">17, 5th Floor, R. Amin Trade Centre,KDA Ave, Khulna 9100</p>
 
                 <p class="m-0">
-                    <strong class="fw-medium">sale@uomo.com</strong>
+                    <strong class="fw-medium">contact@frogbid.com</strong>
                 </p>
                 <br>
                 <p>
-                    <strong class="fw-medium">+1 246-345-0695</strong>
+                    <strong class="fw-medium">+8801729277765</strong>
                 </p>
             </div><!-- /.footer-column -->
 
