--- a/index.html
+++ b/index.html
@@ -541,8 +541,9 @@
                     </div>
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
                         <h2 class="h1 fw-normal mb-0 animate animate_fade animate_btt animate_delay-5">The Classics</h2>
-                        <p class="fs-6 mb-4 pb-2 animate animate_fade animate_btt animate_delay-5">An exclusive
-                            selection of this season's trends.</p>
+                        <p class="fs-6 mb-4 pb-2 animate animate_fade animate_btt animate_delay-5">WELCOME TO
+                            THE WORLD OF
+                            GOLDEN FIBER</p>
                         <a href="#"
                            class="btn-link btn-link_lg default-underline text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7">Discover
                             Now</a>
@@ -562,8 +563,9 @@
                     </div>
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
                         <h2 class="h1 fw-normal mb-0 animate animate_fade animate_btt animate_delay-5">The Classics</h2>
-                        <p class="fs-6 mb-4 pb-2 animate animate_fade animate_btt animate_delay-5">An exclusive
-                            selection of this season's trends.</p>
+                        <p class="fs-6 mb-4 pb-2 animate animate_fade animate_btt animate_delay-5">WELCOME TO
+                            THE WORLD OF
+                            GOLDEN FIBER</p>
                         <a href="#"
                            class="btn-link btn-link_lg default-underline text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7">Discover
                             Now</a>
