--- a/product.html
+++ b/product.html
@@ -226,7 +226,7 @@
         </a>
 
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
             </a>
         </div><!-- /.logo -->
@@ -455,7 +455,7 @@
     </div>
     <div class="header-desk header-desk_type_1">
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
             </a>
         </div><!-- /.logo -->
@@ -640,7 +640,7 @@
         <div class="row row-cols-lg-5 row-cols-2">
             <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
                 <div class="logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
                     </a>
                 </div><!-- /.logo -->
