--- a/product.html
+++ b/product.html
@@ -698,11 +698,11 @@
                 <ul class="sub-menu__list list-unstyled">
                     <li class="sub-menu__item"><a href="index.html" class="menu-link menu-link_us-s">Home</a>
                     </li>
-                    <li class="sub-menu__item"><a href="./about.html" class="menu-link menu-link_us-s">About Us</a></li>
+                    <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">About Us</a></li>
 
-                    <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Faq</a>
+                    <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Faq</a>
                     </li>
-                    <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Contact Us</a>
+                    <li class="sub-menu__item"><a href="contact.html" class="menu-link menu-link_us-s">Contact Us</a>
                     </li>
                 </ul>
             </div><!-- /.footer-column -->
